finish javadoc; add assets; refactor app packages;